--- a/_layouts/math.html
+++ b/_layouts/math.html
@@ -3,27 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <! MathJAX config. Load before calling MathJax >
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        TeX: { equationNumbers: { autoNumber: "AMS" } }
+      });
+    </script>
     <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>
-    
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/styles.css">
     {% seo %}
 
-    <script type="text/javascript">
-      leftAlignMath() {
-        MathJax.Hub.Config({
-        jax: ["input/TeX","output/HTML-CSS"],
-        displayAlign: "left"
-      });
-  
-      MathJax.Hub.Config({
-          TeX: { equationNumbers: { autoNumber: "AMS" } }
-      });
-    }
-    </script>
   </head>
   <body>
     {% include navigation.html %}
